Define PiecewiseGF and move computeNumTerms to GeneratingFunction

--- a/mlir/lib/Analysis/Presburger/CMakeLists.txt
+++ b/mlir/lib/Analysis/Presburger/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_mlir_library(MLIRPresburger
   Barvinok.cpp
+  GeneratingFunction.cpp
   IntegerRelation.cpp
   LinearTransform.cpp
   Matrix.cpp
